Commited All Frontend

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,10 @@
 .header{
     height: 34vw;
     margin: 30px auto;
-    background: url('/header_img.png') no-repeat;
+    background: url('/iphone_1.png') no-repeat;
     background-size: contain;
     position: relative;
+    background-color: transparent;
 }
 
 .header-contents{
@@ -20,21 +21,21 @@
 
 .header-contents h2{
     font-weight: 500;
-    color: white;
+    color: tomato;
     font-size: max(4.5vw,22px);
 
 }
 .header-contents p{
-    color: white;
+    color: black;
     font-size: 1vw;
 }
 
 .header-contents button{
     border: none;
-    color: #747474;
+    color: tomato;
     font-weight: 500;
     padding: 1vw 2.3vw;
-    background-color: white;
+    background-color: black;
     font-size: max(1vw,13px);
     border-radius: 50px;
 }
