--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,10 +3,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 
-.navbar .logo{
-    width: 150px;
+.navbar .pixel{
+    width: 100px;
+
+   
 
 }
 
